[gd_scene load_steps=48 format=3 uid="uid://18hsk2ar7kas"]

[ext_resource type="Script" path="res://src/main/scene/role/enemy/enemy_base/enemy_base.gd" id="1_jftvx"]
[ext_resource type="Texture2D" uid="uid://dyrse8e4134ni" path="res://src/main/assets/textures/enemy/Ghoul Sprite Sheet 62 x 33.png" id="2_8en82"]
[ext_resource type="Texture2D" uid="uid://dnj73mg2hfe32" path="res://src/main/assets/textures/player/undead_shadow.png" id="3_r15va"]
[ext_resource type="PackedScene" uid="uid://dovqdbr87wq8w" path="res://src/main/common/component/hurt_system/hurt_system.tscn" id="5_46um4"]
[ext_resource type="PackedScene" uid="uid://bfwmi3jc08w6q" path="res://src/main/common/component/hit_system/hit_system.tscn" id="5_ssnoe"]
[ext_resource type="Shader" path="res://src/main/assets/shaders/hit_flash_system.gdshader" id="6_po0j3"]
[ext_resource type="PackedScene" uid="uid://ck2k0eckgylaa" path="res://src/main/common/component/health_system/health_system.tscn" id="6_rbycc"]
[ext_resource type="PackedScene" uid="uid://uhfxrobvkbqg" path="res://src/main/scene/ui/health_bar/health_bar.tscn" id="7_yo87q"]
[ext_resource type="PackedScene" uid="uid://bhhtbhjnebegd" path="res://src/main/common/component/hit_flash_system/hit_flash_system.tscn" id="8_iiqwl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_skfdf"]
atlas = ExtResource("2_8en82")
region = Rect2(0, 165, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_y535f"]
atlas = ExtResource("2_8en82")
region = Rect2(62, 165, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuabe"]
atlas = ExtResource("2_8en82")
region = Rect2(124, 165, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_urkip"]
atlas = ExtResource("2_8en82")
region = Rect2(186, 165, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwycf"]
atlas = ExtResource("2_8en82")
region = Rect2(248, 165, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqivm"]
atlas = ExtResource("2_8en82")
region = Rect2(310, 165, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_62pv8"]
atlas = ExtResource("2_8en82")
region = Rect2(372, 165, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvspb"]
atlas = ExtResource("2_8en82")
region = Rect2(434, 165, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_oblro"]
atlas = ExtResource("2_8en82")
region = Rect2(496, 165, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_r25h4"]
atlas = ExtResource("2_8en82")
region = Rect2(558, 165, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvp3c"]
atlas = ExtResource("2_8en82")
region = Rect2(620, 165, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lanb"]
atlas = ExtResource("2_8en82")
region = Rect2(0, 132, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eg8y"]
atlas = ExtResource("2_8en82")
region = Rect2(62, 132, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_5elk5"]
atlas = ExtResource("2_8en82")
region = Rect2(124, 132, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa3c8"]
atlas = ExtResource("2_8en82")
region = Rect2(186, 132, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_3comk"]
atlas = ExtResource("2_8en82")
region = Rect2(248, 132, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbonc"]
atlas = ExtResource("2_8en82")
region = Rect2(310, 132, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_vreuh"]
atlas = ExtResource("2_8en82")
region = Rect2(372, 132, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_wljah"]
atlas = ExtResource("2_8en82")
region = Rect2(434, 132, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ydpo"]
atlas = ExtResource("2_8en82")
region = Rect2(496, 132, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6rgu"]
atlas = ExtResource("2_8en82")
region = Rect2(0, 0, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnfwt"]
atlas = ExtResource("2_8en82")
region = Rect2(62, 0, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_138rx"]
atlas = ExtResource("2_8en82")
region = Rect2(124, 0, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhcrw"]
atlas = ExtResource("2_8en82")
region = Rect2(186, 0, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_l03s1"]
atlas = ExtResource("2_8en82")
region = Rect2(0, 33, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_87ybc"]
atlas = ExtResource("2_8en82")
region = Rect2(62, 33, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_epfmj"]
atlas = ExtResource("2_8en82")
region = Rect2(124, 33, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_gub6b"]
atlas = ExtResource("2_8en82")
region = Rect2(186, 33, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcxn5"]
atlas = ExtResource("2_8en82")
region = Rect2(248, 33, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqw4k"]
atlas = ExtResource("2_8en82")
region = Rect2(310, 33, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ule5"]
atlas = ExtResource("2_8en82")
region = Rect2(372, 33, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_88cax"]
atlas = ExtResource("2_8en82")
region = Rect2(434, 33, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hpfm"]
atlas = ExtResource("2_8en82")
region = Rect2(496, 33, 62, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_txnvl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_skfdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y535f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuabe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urkip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwycf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqivm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62pv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvspb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oblro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r25h4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvp3c")
}],
"loop": false,
"name": &"create",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lanb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eg8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5elk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa3c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3comk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbonc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vreuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wljah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ydpo")
}],
"loop": false,
"name": &"die",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6rgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnfwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_138rx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhcrw")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l03s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87ybc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epfmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gub6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcxn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqw4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ule5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88cax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hpfm")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xjpvt"]
radius = 4.0
height = 18.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yqjya"]
resource_local_to_scene = true
shader = ExtResource("6_po0j3")
shader_parameter/lerp_percent = null

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8he4s"]
radius = 5.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3eep7"]
radius = 6.0
height = 22.0

[node name="EnemyBase" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_jftvx")

[node name="Body" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Body"]
sprite_frames = SubResource("SpriteFrames_txnvl")
animation = &"die"
offset = Vector2(0, -15)

[node name="UndeadShadow" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_r15va")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_xjpvt")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 20.0
navigation_layers = 3
path_postprocessing = 1
avoidance_enabled = true
neighbor_distance = 50.0
max_speed = 40.0
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="HealthSystem" parent="." instance=ExtResource("6_rbycc")]

[node name="HitFlashSystem" parent="." node_paths=PackedStringArray("health_system", "sprite") instance=ExtResource("8_iiqwl")]
health_system = NodePath("../HealthSystem")
sprite = NodePath("../Body/AnimatedSprite2D")
hit_flash_material = SubResource("ShaderMaterial_yqjya")

[node name="HitSystem" parent="." groups=["enemy_hit"] instance=ExtResource("5_ssnoe")]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" parent="HitSystem" index="0"]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_8he4s")

[node name="HurtSystem" parent="." instance=ExtResource("5_46um4")]
collision_layer = 4
collision_mask = 2
hurt_type = 1

[node name="CollisionShape2D" parent="HurtSystem" index="0"]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_3eep7")

[node name="HealthBar" parent="." instance=ExtResource("7_yo87q")]
offset_top = -25.0
offset_bottom = -25.0
scale = Vector2(0.03, 0.1)

[editable path="HitSystem"]
[editable path="HurtSystem"]
